ts-type-checker/environment/visible_tests/mixinWithBaseDependingOnSelfNoCrash1.errors
mixinWithBaseDependingOnSelfNoCrash1.ts(15,48): error TS2345: Argument of type 'typeof BaseItem' is not assignable to parameter of type 'new (...args: any[]) => any'.
